--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a routerLink="invoices">
+    <a routerLink="invoices" class="me-3">
       <img style="width: 30px;" src="assets/images/angular.png" alt="Logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -9,16 +9,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item" [class.active]="isSelected('invoices')">
+        <li class="nav-item me-3" [class.active]="isSelected('invoices')">
           <a class="nav-link" routerLink="invoices">Invoices</a>
         </li>
-        <li class="nav-item" [class.active]="isSelected('accounting')">
+        <li class="nav-item me-3" [class.active]="isSelected('accounting')">
           <a class="nav-link" routerLink="accounting">Accounting</a>
         </li>
-        <li class="nav-item" [class.active]="isSelected('tax')">
+        <li class="nav-item me-3" [class.active]="isSelected('tax')">
           <a class="nav-link" routerLink="tax">Tax Reporting</a>
         </li>
-        <li class="nav-item" [class.active]="isSelected('settings')">
+        <li class="nav-item me-3" [class.active]="isSelected('settings')">
           <a class="nav-link" routerLink="settings">Settings</a>
         </li>
       </ul>
