feature:  - added environment file

--- a/src/app/modules/accounting/accounting.component.html
+++ b/src/app/modules/accounting/accounting.component.html
@@ -1,1 +1,11 @@
-<p>accounting works!</p>
+<div class="container-xxl my-md-4 bd-layout">
+  <app-quarter-slider></app-quarter-slider>
+</div>
+
+<!-- TODO
+  here should be next components:
+  quarter-slider
+  total-taxes (expanded/collapsed)
+  transactions-list (with Add transaction button)
+
+-->
