feature:  - added transactions-list and progress components

--- a/src/app/modules/accounting/accounting.component.html
+++ b/src/app/modules/accounting/accounting.component.html
@@ -1,5 +1,6 @@
 <div class="container-xxl my-md-4 bd-layout">
   <app-quarter-slider></app-quarter-slider>
+  <app-transactions-list></app-transactions-list>
 </div>
 
 <!-- TODO
