feature:  - added possibility to write quarters to database  - changed default localhost post to 4400

--- a/src/app/modules/accounting/components/transactions-list/transactions-list.component.html
+++ b/src/app/modules/accounting/components/transactions-list/transactions-list.component.html
@@ -81,7 +81,11 @@
   </div>
 </div>
 
-
+<div class="container">
+  here should be transactions list
+  <button class="btn btn-primary" (click)="addPayment()">Add payment</button>
+  <button class="btn btn-danger" (click)="deletePayment()">Delete payment</button>
+</div>
 
 <!--<div>-->
 <!--  <input type="file" (change)="handleFileInput($event)">-->
